[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "castenv"
version = "0.3.0"
description = "Smart environment loader with robust casting/normalization. Layers: decouple → dotenv → os.environ."
keywords = ["env", "dotenv", "decouple", "config", "settings", "casting", "normalization"]
authors = ["Ryan Julyan <ryan@julyan.biz>"]
license = "MIT"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
readme = "README.md"
homepage = "https://pypi.org/project/castenv/"
repository = "https://github.com/systemizing-solutions/castenv"
packages = [
    { include = "castenv", from = "src" }
]
include = ["src/castenv/*"]

[tool.poetry.dependencies]
python = "^3.9"
# Include optional dependencies
python-dotenv = { version = ">=1.1.1", optional = true }
python-decouple = { version = ">=3.8", optional = true }

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
bumpver = "^2025.1131"
coverage = "^7.6.4"
flake8 = "^7.1.1"
flake8-html = "^0.4.3"
isort = "^5.13.2"
mypy = "^1.13.0"
pytest = "^8.3.3"

# Optional: both libs are extras (no hard deps)
[tool.poetry.extras]
dotenv = ["python-dotenv"]
decouple = ["python-decouple"]

[tool.urls]
"Homepage" = "https://pypi.org/project/castenv/"
"Repository" = "https://github.com/systemizing-solutions/castenv"

[tool.bumpver]
current_version = "0.3.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    '^version = "{version}"',
    '^current_version = "{version}"',
]
"src/castenv/__init__.py" = [
    '__version__ = "{version}"',
]
"README.md" = [
    '^**current_version** = "v{version}"',
]
